--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ psycopg2==2.9.9
 flask==3.0.0
 requests~=2.31.0
 tqdm==4.66.1
+catboost==1.2.2
+ipywidgets==8.1.1
+jupyterlab==4.0.9
+sentence-transformers==2.2.2
